--- a/postgres/.env.example
+++ b/postgres/.env.example
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://app:app@localhost:5432/db"
+ARCHIVE_PATH=""
