--- a/mysql/package.json
+++ b/mysql/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.10.1",
-    "axios": "^1.3.2"
+    "axios": "^1.3.2",
+    "throttled-queue": "^2.1.4"
   }
 }
